crates/pgls_pretty_print/tests/snapshots/multi/tests__tsdicts_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/tsdicts.sql
snapshot_kind: text
---
CREATE TEXT SEARCH DICTIONARY ispell (
  template = ispell,
  dictfile = ispell_sample,
  afffile = ispell_sample
);

SELECT ts_lexize('ispell', 'skies');

SELECT ts_lexize('ispell', 'bookings');

SELECT ts_lexize('ispell', 'booking');

SELECT ts_lexize('ispell', 'foot');

SELECT ts_lexize('ispell', 'foots');

SELECT ts_lexize('ispell', 'rebookings');

SELECT ts_lexize('ispell', 'rebooking');

SELECT ts_lexize('ispell', 'rebook');

SELECT ts_lexize('ispell', 'unbookings');

SELECT ts_lexize('ispell', 'unbooking');

SELECT ts_lexize('ispell', 'unbook');

SELECT ts_lexize('ispell', 'footklubber');

SELECT ts_lexize('ispell', 'footballklubber');

SELECT ts_lexize('ispell', 'ballyklubber');

SELECT ts_lexize('ispell', 'footballyklubber');

CREATE TEXT SEARCH DICTIONARY hunspell (
  template = ispell,
  dictfile = ispell_sample,
  afffile = hunspell_sample
);

SELECT ts_lexize('hunspell', 'skies');

SELECT ts_lexize('hunspell', 'bookings');

SELECT ts_lexize('hunspell', 'booking');

SELECT ts_lexize('hunspell', 'foot');

SELECT ts_lexize('hunspell', 'foots');

SELECT ts_lexize('hunspell', 'rebookings');

SELECT ts_lexize('hunspell', 'rebooking');

SELECT ts_lexize('hunspell', 'rebook');

SELECT ts_lexize('hunspell', 'unbookings');

SELECT ts_lexize('hunspell', 'unbooking');

SELECT ts_lexize('hunspell', 'unbook');

SELECT ts_lexize('hunspell', 'footklubber');

SELECT ts_lexize('hunspell', 'footballklubber');

SELECT ts_lexize('hunspell', 'ballyklubber');

SELECT ts_lexize('hunspell', 'footballyklubber');

CREATE TEXT SEARCH DICTIONARY hunspell_long (
  template = ispell,
  dictfile = hunspell_sample_long,
  afffile = hunspell_sample_long
);

SELECT ts_lexize('hunspell_long', 'skies');

SELECT ts_lexize('hunspell_long', 'bookings');

SELECT ts_lexize('hunspell_long', 'booking');

SELECT ts_lexize('hunspell_long', 'foot');

SELECT ts_lexize('hunspell_long', 'foots');

SELECT ts_lexize('hunspell_long', 'rebookings');

SELECT ts_lexize('hunspell_long', 'rebooking');

SELECT ts_lexize('hunspell_long', 'rebook');

SELECT ts_lexize('hunspell_long', 'unbookings');

SELECT ts_lexize('hunspell_long', 'unbooking');

SELECT ts_lexize('hunspell_long', 'unbook');

SELECT ts_lexize('hunspell_long', 'booked');

SELECT ts_lexize('hunspell_long', 'footklubber');

SELECT ts_lexize('hunspell_long', 'footballklubber');

SELECT ts_lexize('hunspell_long', 'ballyklubber');

SELECT ts_lexize('hunspell_long', 'ballsklubber');

SELECT ts_lexize('hunspell_long', 'footballyklubber');

SELECT ts_lexize('hunspell_long', 'ex-machina');

CREATE TEXT SEARCH DICTIONARY hunspell_num (
  template = ispell,
  dictfile = hunspell_sample_num,
  afffile = hunspell_sample_num
);

SELECT ts_lexize('hunspell_num', 'skies');

SELECT ts_lexize('hunspell_num', 'sk');

SELECT ts_lexize('hunspell_num', 'bookings');

SELECT ts_lexize('hunspell_num', 'booking');

SELECT ts_lexize('hunspell_num', 'foot');

SELECT ts_lexize('hunspell_num', 'foots');

SELECT ts_lexize('hunspell_num', 'rebookings');

SELECT ts_lexize('hunspell_num', 'rebooking');

SELECT ts_lexize('hunspell_num', 'rebook');

SELECT ts_lexize('hunspell_num', 'unbookings');

SELECT ts_lexize('hunspell_num', 'unbooking');

SELECT ts_lexize('hunspell_num', 'unbook');

SELECT ts_lexize('hunspell_num', 'booked');

SELECT ts_lexize('hunspell_num', 'footklubber');

SELECT ts_lexize('hunspell_num', 'footballklubber');

SELECT ts_lexize('hunspell_num', 'ballyklubber');

SELECT ts_lexize('hunspell_num', 'footballyklubber');

CREATE TEXT SEARCH DICTIONARY hunspell_err (
  template = ispell,
  dictfile = ispell_sample,
  afffile = hunspell_sample_long
);

CREATE TEXT SEARCH DICTIONARY hunspell_err (
  template = ispell,
  dictfile = ispell_sample,
  afffile = hunspell_sample_num
);

CREATE TEXT SEARCH DICTIONARY hunspell_invalid_1 (
  template = ispell,
  dictfile = hunspell_sample_long,
  afffile = ispell_sample
);

CREATE TEXT SEARCH DICTIONARY hunspell_invalid_2 (
  template = ispell,
  dictfile = hunspell_sample_long,
  afffile = hunspell_sample_num
);

CREATE TEXT SEARCH DICTIONARY hunspell_invalid_3 (
  template = ispell,
  dictfile = hunspell_sample_num,
  afffile = ispell_sample
);

CREATE TEXT SEARCH DICTIONARY hunspell_err (
  template = ispell,
  dictfile = hunspell_sample_num,
  afffile = hunspell_sample_long
);

CREATE TEXT SEARCH DICTIONARY synonym (
  template = synonym,
  synonyms = synonym_sample
);

SELECT ts_lexize('synonym', 'PoStGrEs');

SELECT ts_lexize('synonym', 'Gogle');

SELECT ts_lexize('synonym', 'indices');

SELECT dictinitoption FROM pg_ts_dict WHERE dictname = 'synonym';

ALTER TEXT SEARCH DICTIONARY synonym (casesensitive = 1);

SELECT ts_lexize('synonym', 'PoStGrEs');

SELECT dictinitoption FROM pg_ts_dict WHERE dictname = 'synonym';

ALTER TEXT SEARCH DICTIONARY synonym (casesensitive = 2);

ALTER TEXT SEARCH DICTIONARY synonym (casesensitive = off);

SELECT ts_lexize('synonym', 'PoStGrEs');

SELECT dictinitoption FROM pg_ts_dict WHERE dictname = 'synonym';

CREATE TEXT SEARCH DICTIONARY thesaurus (
  template = thesaurus,
  dictfile = thesaurus_sample,
  dictionary = english_stem
);

SELECT ts_lexize('thesaurus', 'one');

CREATE TEXT SEARCH CONFIGURATION ispell_tst (copy = english);
